- fixed error where startup codes were not being saved properly and rendered with lookup id decoded - added ability for htc phones to connect securely - reduced time-out for receiving an ACK from pod to fix issue with intermitted NACK locking up the buttons - Fixed issue with not retrieving power-off codes for an activity - bm_fw_up.py updated to test non-destructive firmware upload

--- a/src/res/xml/preferences.xml
+++ b/src/res/xml/preferences.xml
@@ -5,5 +5,10 @@
 	 	android:title="Haptic Feedback" 
 	 	android:key="hapticPREF" 
 	 	android:defaultValue="true" 
-	 	android:summary="When checked the buttons will give haptic feedback when pushed"/>	 
+	 	android:summary="When checked the buttons will give haptic feedback when pushed"/>
+	 <CheckBoxPreference 
+	 	android:title="HTC Bluetooth Insecure Mode" 
+	 	android:key="htcInsecure" 
+	 	android:defaultValue="false" 
+	 	android:summary="Some HTC phones have problems in insecure mode, check to enable"/>	 	 
 </PreferenceScreen>
