Added blue highlight to valid pod entries, opened up discovery of all bluetooth items to show up updated default preferences for insecure mode fixed certain force-close crashes when state changes occur removed some debug specific code cleaned up the menu option to use insecure connection scheme

--- a/src/res/xml/preferences.xml
+++ b/src/res/xml/preferences.xml
@@ -5,10 +5,10 @@
 	 	android:title="Haptic Feedback" 
 	 	android:key="hapticPREF" 
 	 	android:defaultValue="true" 
-	 	android:summary="When checked the buttons will give haptic feedback when pushed"/>
+	 	android:summary="Buttons will give haptic feedback when pushed"/>
 	 <CheckBoxPreference 
-	 	android:title="HTC Bluetooth Insecure Mode" 
+	 	android:title="Bluetooth Insecure Mode" 
 	 	android:key="htcInsecure" 
-	 	android:defaultValue="false" 
-	 	android:summary="Some HTC phones have problems in insecure mode, check to enable"/>	 	 
+	 	android:defaultValue="true" 
+	 	android:summary="Toggle insecure bluetooth connection mode"/>	 	 
 </PreferenceScreen>
