--- a/src/res/layout/pod_list.xml
+++ b/src/res/layout/pod_list.xml
@@ -50,6 +50,7 @@
         android:layout_weight="2"
         android:divider="#555"
         android:dividerHeight="1dp"
+        android:cacheColorHint="#00000000"
     />
     <Button android:id="@+id/button_scan"
         android:layout_width="fill_parent"
