major updates to bootloader and way we get data from pod

--- a/src/res/menu/options_menu.xml
+++ b/src/res/menu/options_menu.xml
@@ -28,7 +28,7 @@
           android:title="@string/learn_button" ></item>
     <item android:id="@+id/stop_learn"
           android:icon="@android:drawable/ic_input_delete"
-          android:title="Cancel Learn"
+          android:title="Stop Learning"
           android:visible = "false" ></item>    
     <item android:id="@+id/advanced"
           android:title="More" 
