--- a/src/res/layout/enter_name.xml
+++ b/src/res/layout/enter_name.xml
@@ -3,9 +3,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent" android:layout_height="fill_parent"
 	android:padding="10dip" android:orientation="vertical">
+	<!-- 
 	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" 
-			android:text="Enter a button name"			
+			android:text="Enter name"			
 	/>
+	 -->
 	<EditText android:id="@+id/device_name" android:layout_width="fill_parent"
 		android:layout_height="wrap_content" android:layout_weight="1"
 		android:textSize="20sp" />
@@ -13,3 +15,4 @@
 	<Button android:id="@+id/enter_button" android:layout_height="wrap_content"
 		android:layout_width="fill_parent" android:text="Enter" />
 </LinearLayout>
+ 
