--- a/src/res/layout-sw600dp/main_interface.xml
+++ b/src/res/layout-sw600dp/main_interface.xml
@@ -10,8 +10,7 @@
 	    android:layout_width="fill_parent"
 	    android:layout_height="fill_parent" >
 	    <include android:id="@+id/activitiesView" layout="@layout/activities_screen" />
-	    <include android:id="@+id/mainView"  layout="@layout/main_screen" />
-	    <include android:id="@+id/numbersView"  layout="@layout/number_screen" />    
+	    <include android:id="@+id/mainView"  layout="@layout/main_screen" />    
 	</ViewFlipper>	
 	<LinearLayout
 		android:orientation="vertical"
@@ -19,9 +18,13 @@
 		android:layout_width="fill_parent"
 		android:layout_gravity="center"
 		android:layout_alignParentBottom="true" >	
-		<ImageView android:src="@drawable/middle_circle" android:layout_width="50dip"
-			android:layout_height="20dip" android:layout_marginTop="5dp"
-			android:id="@+id/pager" android:scaleType="fitXY" android:layout_gravity="center_horizontal"
-		></ImageView>  	
+		<ImageView android:src="@drawable/middle_circle" 
+		    android:layout_width="50dip"
+			android:layout_height="25dip" 
+			android:layout_marginTop="5dp"
+			android:id="@+id/pager" 
+			android:scaleType="fitXY" 
+			android:layout_gravity="center_horizontal">		    
+		</ImageView>  	
 	</LinearLayout>
 </RelativeLayout>
