--- a/src/res/layout-sw600dp/roku_device.xml
+++ b/src/res/layout-sw600dp/roku_device.xml
@@ -3,38 +3,61 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:baselineAligned="false"
-    android:layout_gravity="center">
-    <Spinner 	
-		android:id="@+id/device_spinner" 
-		android:prompt="@string/spinner_prompt"
-		android:layout_height = "50dp"
-		android:layout_width="fill_parent"
-		android:layout_gravity="center"
-		android:layout_marginLeft="10dp"
-		android:layout_marginRight="10dp"
-		android:background="@drawable/spinner_look"
-		android:textColor="#FFFFFF" >
-	</Spinner>		
-	<RelativeLayout
-		android:layout_width="wrap_content" 
+    android:baselineAligned="false">
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:layout_weight="0.45"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp" >
+		<Spinner
+		    android:id="@+id/device_spinner"
+		    android:layout_width="250dp"
+		    android:layout_height="50dp"
+		    android:layout_centerHorizontal="true"
+		    android:layout_centerVertical="true"
+		    android:background="@drawable/spinner_look"
+		    android:prompt="@string/spinner_prompt"
+		    android:textColor="#FFFFFF" />
+	</RelativeLayout>
+	
+    <LinearLayout
+		android:layout_marginTop="10dp"
+		android:orientation="horizontal"
+		android:layout_width="500dp" 
 		android:layout_height="0dp"
-		android:layout_gravity="center"
 		android:paddingLeft="5dp"
 		android:paddingRight="5dp"
-		android:paddingBottom="5dp"
-		android:layout_weight="1.2"
-		android:weightSum="3.0">     
-		<ImageView android:src="@drawable/spacer" android:layout_width="fill_parent"
-			android:layout_height="fill_parent" android:layout_marginTop="5dp" android:visibility="invisible"/> 
-		<ImageButton android:id="@+id/btn_home" android:src="@drawable/go_home" style="@style/CustomImageBtnText" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_width="100dp" android:layout_weight="1" android:layout_height="wrap_content" android:layout_centerInParent="true"></ImageButton>					  					  
-		<ImageView android:src="@drawable/spacer" android:layout_width="fill_parent"
-			android:layout_height="fill_parent" android:layout_marginTop="5dp" android:visibility="invisible"/> 
-	</RelativeLayout>
+		android:layout_gravity="center|center_horizontal|center_vertical"
+		android:layout_weight="1">
+		<View android:id="@+id/strut1"
+	        android:layout_width="0dp"
+	        android:layout_height="fill_parent" 
+	        android:layout_weight="1" 
+	        style="@style/CustomImageBtnText"
+	        android:visibility="invisible"/>
+		<ImageButton android:id="@+id/btn_home" 
+		    android:src="@drawable/go_home" 
+		    style="@style/CustomImageBtnText"  
+		    android:layout_width="0dp" 
+		    android:layout_weight="1" 
+		    android:layout_height="fill_parent"></ImageButton>
+		<View android:id="@+id/strut1"
+	        android:layout_width="0dp"
+	        android:layout_height="fill_parent" 
+	        android:layout_weight="1" 
+	        style="@style/CustomImageBtnText"
+	        android:visibility="invisible"/>
+    </LinearLayout>
+	
 	<LinearLayout
 		android:layout_marginTop="10dp"
 		android:orientation="horizontal"
-		android:layout_width="fill_parent" 
+		android:layout_width="500dp" 
 		android:layout_height="0dp"
 		android:layout_gravity="center|center_horizontal|center_vertical"
 		android:paddingLeft="5dp"
@@ -45,22 +68,24 @@
 		<ImageButton style="@style/CustomImageBtnText" android:layout_width="0dp" android:src="@drawable/go_up" android:id="@+id/btn_up" android:scaleType="centerInside" android:layout_gravity="center_horizontal"></ImageButton>
 		<ImageButton style="@style/CustomImageBtnText" android:layout_width="0dp" android:src="@drawable/media_seek_forward" android:id="@+id/forward_btn" android:scaleType="centerInside"></ImageButton>		
 	</LinearLayout>
+
 	<LinearLayout
-		android:orientation="horizontal"
-		android:layout_width="fill_parent" 
-		android:layout_height="0dp"
-		android:layout_gravity="center" 
-		android:paddingLeft="5dp"
-		android:paddingRight="5dp"
-		android:layout_weight="1"
-		android:weightSum="3.0">
+	    android:layout_width="500dp"
+	    android:layout_height="0dp"
+	    android:layout_gravity="center"
+	    android:layout_weight="1"
+	    android:orientation="horizontal"
+	    android:paddingLeft="5dp"
+	    android:paddingRight="5dp"
+	    android:weightSum="3.0" >
+
 		<ImageButton style="@style/CustomImageBtnText" android:src="@drawable/go_previous" android:id="@+id/left_btn" android:scaleType="centerInside"></ImageButton>    		
 		<Button android:id="@+id/btn_enter" android:text="Enter" style="@style/CustomBtnText"></Button>
 		<ImageButton style="@style/CustomImageBtnText" android:src="@drawable/go_next" android:id="@+id/right_btn" android:scaleType="centerInside"></ImageButton>    		
 	</LinearLayout>	
 	<LinearLayout
 		android:orientation="horizontal"
-		android:layout_width="fill_parent" 
+		android:layout_width="500dp"
 		android:layout_height="0dp"
 		android:layout_gravity="center"
 		android:paddingLeft="5dp"
