--- a/src/res/values/numbers.xml
+++ b/src/res/values/numbers.xml
@@ -2,4 +2,6 @@
 <resources>
     <integer
         name="anim_speed">300</integer>
+    <integer
+        name="tablet_size">6</integer>
 </resources>
