Cleanup of repository, added a few missing files, no functional changes.

--- a/src/res/layout/main_screen.xml
+++ b/src/res/layout/main_screen.xml
@@ -13,7 +13,7 @@
 		android:layout_marginLeft="10dp"
 		android:layout_marginRight="10dp"
 		android:background="@drawable/spinner_look"
-		android:textColor="#FFFFFF" >
+		android:textColor="#000000">
 	</Spinner>		
 	<RelativeLayout
 		android:layout_width="fill_parent" 
